# swagger/swagger.json
@@ -54,32 +54,6 @@
             "description": "article not found"
           }
         }
-      },
-      "post": {
-        "summary": "Creates a article",
-        "tags": [
-          "Articles"
-        ],
-        "consumes": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "article",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/create_article"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "article created"
-          },
-          "422": {
-            "description": "invalid request"
-          }
-        }
       }
     },
     "/articles/{id}": {
@@ -134,58 +108,29 @@
             "description": "article not found"
           }
         }
-      },
-      "put": {
-        "summary": "Updates an article",
+      }
+    },
+    "/contact_forms": {
+      "post": {
+        "summary": "Sends email to us",
         "tags": [
-          "Articles"
+          "Contact Forms"
         ],
         "consumes": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "type": "string",
-            "required": true
-          },
-          {
-            "name": "article",
+            "name": "contact_form",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/create_article"
+              "$ref": "#/definitions/contact_form"
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "article updated"
-          },
-          "422": {
-            "description": "invalid request"
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete an article",
-        "tags": [
-          "Articles"
-        ],
-        "consumes": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "type": "string",
-            "required": true
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "article deleted"
+            "description": "contact_form created"
           },
           "422": {
             "description": "invalid request"
@@ -242,6 +187,33 @@
         "description": {
           "type": "string",
           "example": "SpaceOcean Article Example, This description should include minimum 10 and max 800 characters"
+        },
+        "title": {
+          "type": "string",
+          "example": "SpaceOcean Title"
+        }
+      }
+    },
+    "contact_form": {
+      "type": "object",
+      "required": [
+        "email",
+        "name",
+        "body",
+        "title"
+      ],
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "spaceocean.spacecraft@gmail.com"
+        },
+        "name": {
+          "type": "string",
+          "example": "Baturay"
+        },
+        "body": {
+          "type": "string",
+          "example": "SpaceOcean Mail Try"
         },
         "title": {
           "type": "string",
